--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,67 +1,178 @@
-@import url("https://fonts.googleapis.com/css?family=Nunito|PT+Serif:400,400i&display=swap");
-.cv span,
-.about span, .works .works__header span {
-  color: #fc3f33;
-  font-size: 12px;
-  font-family: "Nunito";
-}
-
-.works .works__list .works__work, .works .works__header {
-  display: grid;
-  grid-template-columns: 1fr 3fr 5fr;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=B612+Mono&family=DM+Serif+Display:ital@1&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "PT Serif", serif;
-  background-color: #f0efeb;
-  color: #444444;
-  padding: 30px 40px;
+  font-family: "B612 Mono", monospace;
+  margin-right: 180px;
+}
+body nav {
+  position: fixed;
+  right: 0;
+  top: 0;
+  width: 180px;
+}
+body nav ul {
+  display: grid;
+  grid-template-columns: repeat(3, 60px);
+  grid-template-rows: 100vh;
+}
+body nav ul li {
+  background-color: #f64344;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+}
+body nav ul li span {
+  transform: rotateZ(90deg);
+}
+body nav ul li:first-child {
+  background-color: #5da3ec;
+}
+body nav ul li:last-child {
+  background-color: #ffb301;
+}
+
+h1,
+h2,
+h3,
+h4 {
+  font-family: "DM Serif Display", serif;
+}
+
+main header {
+  margin-top: 250px;
+}
+main header h1 {
+  padding-left: 65px;
+  font-size: 80px;
+  width: 60%;
+  line-height: 1.2;
+  margin-bottom: 100px;
+}
+main header .header__photo {
+  width: 100%;
+  height: 120vh;
+  background-image: url("https://source.unsplash.com/random/12");
+  background-position: center center;
+  background-size: cover;
+}
+
+.about {
+  margin-top: 120px;
+  margin-bottom: 240px;
+  padding: 0px 65px;
+}
+.about h2 {
+  font-size: 120px;
+  width: 50%;
+  margin-bottom: 120px;
+}
+.about .about__columns {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 60px;
+}
+.about .about__columns .about__column {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 650px 20%;
+  gap: 30px;
+}
+.about .about__columns .about__column .img__wrapper {
+  overflow: hidden;
+}
+.about .about__columns .about__column .img__wrapper img {
+  max-width: 100%;
+}
+.about .about__columns .about__column span {
+  font-size: 12px;
   line-height: 1.5;
 }
 
-header {
-  font-size: 46px;
-  letter-spacing: 1px;
-  margin-bottom: 175px;
-}
-
-.works {
-  margin-bottom: 80px;
-}
-.works .works__header {
-  padding-bottom: 10px;
-}
-.works .works__list .works__work {
-  cursor: pointer;
-  font-size: 20px;
-  border-top: 1px solid #444444;
-  padding: 20px 0px;
-}
-.works .works__list .works__work:hover {
-  font-style: italic;
-}
-
-.cv {
+.events {
+  padding: 0px 65px;
+  display: grid;
+  justify-items: center;
   margin-bottom: 120px;
 }
+.events .events__header {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center center;
+  font-size: 64px;
+}
+.events .events__header h4 {
+  font-size: 94px;
+  text-align: center;
+}
+.events .events__list {
+  margin-top: 150px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  place-items: center center;
+  width: 100%;
+}
+.events .events__list .events__event {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.events .events__list .events__event span {
+  margin-bottom: 30px;
+  font-size: 12px;
+}
+.events .btn {
+  margin-top: 120px;
+}
 
-.cv,
-.about {
-  font-size: 30px;
+.btn {
+  text-transform: lowercase;
+  text-decoration: none;
+  color: black;
+  border: 1px solid black;
+  padding: 17px 60px;
+  transition: background-color 0.2s linear;
 }
-a {
-  color: #fc3f33;
-}
-a:hover {
-  font-style: italic;
+.btn:hover {
+  color: white;
+  background-color: black;
 }
 
-.about {
-  padding-bottom: 80px;
+.location {
+  padding: 65px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 33vh;
+  gap: 60px;
+}
+.location .location__address {
+  font-size: 68px;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  border: 1px solid black;
+}
+.location .location__address h3 {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-items: center;
+  align-items: center;
+}
+
+.contact {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  margin: 200px 0px;
+}
+.contact h4 {
+  font-size: 56px;
+  margin-bottom: 30px;
 }
 
 /*# sourceMappingURL=styles.css.map */
