--- a/dest/css/styles.css
+++ b/dest/css/styles.css
@@ -1,178 +1,129 @@
-@import url("https://fonts.googleapis.com/css2?family=B612+Mono&family=DM+Serif+Display:ital@1&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=B612+Mono&family=DM+Serif+Display:ital@0;1&display=swap");
 * {
   box-sizing: border-box;
 }
 
 body {
-  font-family: "B612 Mono", monospace;
-  margin-right: 180px;
+  font-family: "DM Serif Display", monospace;
+  padding: 45px;
 }
-body nav {
-  position: fixed;
-  right: 0;
-  top: 0;
-  width: 180px;
+
+header {
+  background-color: black;
+  border: 1px solid black;
+  margin-bottom: 100px;
 }
-body nav ul {
+header nav ul {
   display: grid;
-  grid-template-columns: repeat(3, 60px);
-  grid-template-rows: 100vh;
+  gap: 1px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(2, 60px);
 }
-body nav ul li {
-  background-color: #f64344;
+header nav ul li {
+  background-color: white;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
 }
-body nav ul li span {
-  transform: rotateZ(90deg);
-}
-body nav ul li:first-child {
-  background-color: #5da3ec;
-}
-body nav ul li:last-child {
-  background-color: #ffb301;
+header nav ul li:nth-child(2) {
+  grid-column-start: span 2;
+  font-size: 32px;
+  text-transform: uppercase;
 }
 
-h1,
-h2,
-h3,
-h4 {
-  font-family: "DM Serif Display", serif;
+main h1,
+main h6 {
+  text-align: center;
+}
+main h1 {
+  font-size: 58px;
+  margin-bottom: 20px;
+}
+main h6 {
+  font-family: "B612 Mono";
+  font-size: 12px;
+  margin-bottom: 50px;
 }
 
-main header {
-  margin-top: 250px;
+.hero {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 80vh;
+  margin-bottom: 150px;
 }
-main header h1 {
-  padding-left: 65px;
-  font-size: 80px;
-  width: 60%;
-  line-height: 1.2;
-  margin-bottom: 100px;
-}
-main header .header__photo {
-  width: 100%;
-  height: 120vh;
-  background-image: url("https://source.unsplash.com/random/12");
+.hero .hero__img {
+  background-image: url("https://source.unsplash.com/random/");
   background-position: center center;
   background-size: cover;
 }
-
-.about {
-  margin-top: 120px;
-  margin-bottom: 240px;
-  padding: 0px 65px;
+.hero .hero__img:first-child {
+  background-image: url("https://source.unsplash.com/random/1");
 }
-.about h2 {
-  font-size: 120px;
-  width: 50%;
-  margin-bottom: 120px;
+.hero .hero__img:last-child {
+  background-image: url("https://source.unsplash.com/random/2");
 }
-.about .about__columns {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 60px;
-}
-.about .about__columns .about__column {
-  height: 100%;
-  display: grid;
-  grid-template-rows: 650px 20%;
-  gap: 30px;
-}
-.about .about__columns .about__column .img__wrapper {
-  overflow: hidden;
-}
-.about .about__columns .about__column .img__wrapper img {
-  max-width: 100%;
-}
-.about .about__columns .about__column span {
-  font-size: 12px;
-  line-height: 1.5;
+.hero .hero__img:nth-last-child(2) {
+  background-image: url("https://source.unsplash.com/random/3");
 }
 
-.events {
-  padding: 0px 65px;
-  display: grid;
-  justify-items: center;
-  margin-bottom: 120px;
-}
-.events .events__header {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  place-items: center center;
-  font-size: 64px;
-}
-.events .events__header h4 {
-  font-size: 94px;
+.arrivals h4 {
+  font-size: 36px;
+  margin-bottom: 70px;
   text-align: center;
 }
-.events .events__list {
-  margin-top: 150px;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  place-items: center center;
-  width: 100%;
-}
-.events .events__list .events__event {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-.events .events__list .events__event span {
-  margin-bottom: 30px;
-  font-size: 12px;
-}
-.events .btn {
-  margin-top: 120px;
-}
-
-.btn {
-  text-transform: lowercase;
-  text-decoration: none;
-  color: black;
+.arrivals .wrapper {
   border: 1px solid black;
-  padding: 17px 60px;
-  transition: background-color 0.2s linear;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 80vh auto;
+  background-color: black;
+  gap: 1px;
 }
-.btn:hover {
-  color: white;
+.arrivals .wrapper .product,
+.arrivals .wrapper .arrivals__category {
+  background-color: white;
+}
+.arrivals .wrapper .arrivals__category {
+  grid-column-start: span 2;
+  text-align: center;
+  font-size: 20px;
+  padding: 20px 0px;
+}
+.arrivals .wrapper .product {
+  padding: 40px;
+  display: grid;
+  gap: 20px;
+  grid-template-rows: 80% auto;
+}
+.arrivals .wrapper .product .product__photo {
   background-color: black;
 }
-
-.location {
-  padding: 65px;
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  grid-template-rows: 33vh;
-  gap: 60px;
-}
-.location .location__address {
-  font-size: 68px;
+.arrivals .wrapper .product .product__data {
   display: flex;
-  justify-items: center;
-  align-items: center;
+  flex-direction: column;
+}
+.arrivals .wrapper .product .product__data .price {
+  margin-top: 10px;
+}
+
+footer {
+  margin: 100px 0px;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 10fr 2fr;
+  background-color: black;
+  gap: 1px;
+  height: 200px;
   border: 1px solid black;
 }
-.location .location__address h3 {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  justify-items: center;
-  align-items: center;
+footer div {
+  background-color: white;
 }
-
-.contact {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  margin: 200px 0px;
+footer div:first-child {
+  grid-column: span 2;
 }
-.contact h4 {
-  font-size: 56px;
-  margin-bottom: 30px;
+footer div:last-child {
+  grid-column: 1/-1;
 }
 
 /*# sourceMappingURL=styles.css.map */
